--- a/main.css
+++ b/main.css
@@ -1243,10 +1243,19 @@ nav #current {
 }
 
 /*------------------------------ Float examples ------------------------------*/
-#float-1, #float-2 {
+#float-1 {
 	padding: 0;
 	margin: 0;
-	height: 200px;
+	width: 500px;
+	height: 350px;
+	border: 5px solid green;
+}
+
+#float-2 {
+	padding: 0;
+	margin: 0;
+	width: 500px;
+	height: 250px;
 	border: 5px solid green;
 }
 
@@ -1259,32 +1268,67 @@ nav #current {
 	float: left;
 }
 
-#float-3 {
+#float-3, #float-4 {
 	padding: 0;
 	margin: 0;
-	height: 150px;
+	width: 500px;
+	height: 250px;
 	border: 5px solid green;
 	list-style-type: none;
 }
 
-#float-4 {
-	padding: 0;
-	margin: 0;
-	width: 100px;
-	height: 150px;
-	border: 5px solid green;
-	list-style-type: none;
-}
-
-#float-3 li, #float-4 li, #float-5 li {
-  float: left;
+#float-4 li {
+	float: right;
 }
 
 #float-5 {
 	padding: 0;
 	margin: 0;
-	width: 100px;
-	height: 150px;
+	width: 250px;
+	height: 250px;
 	border: 5px solid green;
 	list-style-type: none;
+}
+
+#float-3 li, #float-5 li, #float-6 li {
+  float: left;
+}
+
+#float-6 {
+	padding: 0;
+	margin: 0;
+	width: 250px;
+	height: 350px;
+	border: 5px solid green;
+	list-style-type: none;
+}
+
+
+#float-3 li, #float-4 li, #float-5 li, #float-6 li {
+	padding: 0;
+	margin: 0;
+}
+
+#float-7, #float-8, #float-9 {
+	padding: 0;
+	margin: 0;
+	width: 500px;
+	height: 250px;
+	border: 5px solid green;
+}
+
+#float-image-1, #float-image-3, #float-image-5 {
+	float: left;
+}
+
+#float-image-2, #float-image-4, #float-image-6 {
+	float: right;
+}
+
+#float-8 p {
+		clear: left;
+}
+
+#float-9 p {
+		clear: right;
 }
