--- a/main.css
+++ b/main.css
@@ -1505,3 +1505,48 @@ nav #current {
   border: 5px solid red;
   text-align: center;
 }
+
+/*------------------------- Margin collapsing examples -----------------------*/
+#margin-collapsing-1 p {
+	background-color: green;
+	text-align: center;
+	color: white;
+	margin-top: 20px;
+	margin-bottom: 40px;
+}
+
+#margin-collapsing-2, #margin-collapsing-3, #margin-collapsing-4, 
+#margin-collapsing-5, #margin-collapsing-6, #margin-collapsing-7,
+#margin-collapsing-8, #margin-collapsing-9, #margin-collapsing-10 {
+	margin: 20px 0;
+}
+
+#margin-collapsing-2, #margin-collapsing-5, #margin-collapsing-8 {
+	background-color: red;
+}
+
+#margin-collapsing-3, #margin-collapsing-6, #margin-collapsing-9 {
+	background-color: green;
+}
+
+#margin-collapsing-4, #margin-collapsing-7, #margin-collapsing-10 {
+	background-color: blue;
+}
+
+#margin-collapsing-4 p, #margin-collapsing-7 p, #margin-collapsing-10 p {
+	padding: 0;
+	text-align: center;
+	color: white;
+}
+
+#margin-collapsing-5, #margin-collapsing-6 {
+	border: 1px solid black;
+}
+
+#margin-collapsing-8, #margin-collapsing-9 {
+	padding: 1px 0;
+}
+
+
+
+
